@@ -2,6 +2,13 @@ Mon Dec  9 10:10:38 1996  Tom Tromey  <tromey@cygnus.com>
 
 	* inet_aton.c: Use #if 0, not #ifdef 0.
 
+Mon Dec  9 06:36:48 1996  Gary Houston  <ghouston@actrix.gen.nz>
+
+	* ioext.c (scm_sys_ftell): use scm_long2num instead of SCM_MAKINUM
+	to convert the returned value.
+	(scm_sys_fseek): use scm_num2long instead of SCM_INUM to convert
+	the offset argument.
+
 Sun Dec  8 21:06:38 1996  Jim Blandy  <jimb@duality.gnu.ai.mit.edu>
 
 	Add new interface to catch/throw, usable from C as well as
